changes commited