@@ -2,6 +2,7 @@ package comp.CRM.TestCase;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.openqa.selenium.WebDriver;
@@ -16,27 +17,29 @@ import org.testng.annotations.Test;
 public class AmazonAssignment {
 	
 	WebDriver driver;
-	@SuppressWarnings("deprecation")
 	@Parameters({"bname"})
 	@Test
-	public void browserTest(String bname) throws MalformedURLException, InterruptedException
+	public void browserTest(String bname) throws MalformedURLException, InterruptedException, URISyntaxException
 	{
 		if(bname.equalsIgnoreCase("chrome"))
 		{
 			ChromeOptions options= new ChromeOptions();
-			driver=new RemoteWebDriver(new URL("http://localhost:4444"),options);
+			URL url = new URI("http://localhost:4444").toURL();
+			driver=new RemoteWebDriver(url, options);
 			System.out.println("connection established with chrome browser");
 		}
 		if(bname.equalsIgnoreCase("firefox"))
 		{
 			FirefoxOptions options=new FirefoxOptions();
-			driver=new RemoteWebDriver(new URL("http://localhost:4444"),options);
+			URL url = new URI("http://localhost:4444").toURL();
+			driver=new RemoteWebDriver(url, options);
 			System.out.println("connection established between firefox");
 		}
 		if(bname.equalsIgnoreCase("edge"))
 		{
 			EdgeOptions options=new EdgeOptions();
-			driver=new RemoteWebDriver(new URL("http://localhost:4444"),options);
+			URL url = new URI("http://localhost:4444").toURL();
+			driver=new RemoteWebDriver(url, options);
 			System.out.println("connection established between edge");
 		}
 		Thread.sleep(5000);
